# Cubicle

./: Cargo.toml  README  README.md
src/: lib.rs  main.rs  types.rs  utils.rs
src/constants/: config.rs  constants.rs  mod.rs  versions.rs
src/constants/data/: generic_version_data.json  version_data.json
src/extensions/: test.rs
src/loaders/: entity_loader.rs  loader.rs  loader_utils.rs  mod.rs  utils.rs  v1_20_1.rs
src/loaders/blocks_loader/: loader.rs  mod.rs  v3465.rs
src/loaders/entities_loader/: loader.rs  v3465.rs
src/loaders/templates/: block_loader.rs  player_loader.rs
src/loaders/v3465/: block_loader.rs  entity_loader.rs  mod.rs  player_loader.rs
src/models/: mod.rs
src/models/block_entity/: block_entity.rs  mod.rs  prelude.rs
src/models/entity/: README  entity.rs  mod.rs
src/models/filter/: comparable_value.rs  filter.rs  filter_keys.rs  filter_operations.rs  local_structure.rs  mod.rs
src/models/nbt_structures/: mod.rs  v1_20_1.rs
src/models/other/: fast_set.rs  inventory.rs  lasso_string.rs  mod.rs  position.rs  properties.rs  region.rs  structure.rs  tick.rs
src/models/positions/: chunk_position.rs  entity_position.rs  mod.rs  whole_position.rs
src/models/stores/: biome_store.rs  block_entity_store.rs  block_store.rs  entity_store.rs  heightmap_store.rs  mod.rs  structure_store.rs
src/models/world/: block.rs  block_store.rs  chunk.rs  mod.rs  (+5 more)
src/scripts/: version_data_fetcher.py
src/traits/: block_entity.rs  mod.rs
src/utils/: generic_utils.rs  lock_utils.rs  mod.rs  mojang_api.rs  position_utils.rs
tests/: block.rs
(+44 files in other folders)
