[package]
name = "cubicle"
version = "0.1.0"
edition = "2024"

[dependencies]
fastnbt = "2.5.0"
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
flate2 = "1.1.2"
lasso = "0.7.3"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = {version = "0.12.24", features = ["blocking"]}
log = "0.4.28"

[profile.release]
debug = true